<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentTop">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/game_title"
        android:textSize="22sp"/>
    <TextView
        android:text="@string/game_creator"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/my_pick"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/btn_rock"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_rock"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_paper"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_paper"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_scissors"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/btn_scissors"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/phone_pick"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_computer_pick"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_results"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_winner"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_play_again"
            android:text="@string/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>